# data-analysis-tool

./: README.md  data_analysis_cookbook.ipynb  numerical_data_analysis.ipynb  pyproject.toml
data_analysis/: __init__.py  core.py
